@startuml
!include match_parser_hierarchy.plantuml

abstract class token_parser {
	+ <i>final</i> parse()
	# <i>virtual</i> parse_token()
	# <i>virtual</i> parse_eoi()
}

class eoi_parser {
	# <i>final</i> parse_token()
	# <i>final</i> parse_eoi()
}

token_parser <|-- match_parser
token_parser <|-- eoi_parser
@enduml
